--- a/index.html
+++ b/index.html
@@ -7,5 +7,19 @@
 </head>
 <body>
     
+    <div>
+          <h1>Olá, meu nome é lucas</h1>
+        <p>Sou um desenvolvedor web e mobile, tenho aptdão em frontend e backend</p>
+    </div>
+      <div>
+            <h1>Sobre Mim</h1>
+     </div>
+     <div>
+        <h1>Projetos</h1>
+ </div>
+ <div>
+    <h1>contatos</h1>
+</div>
+
 </body>
 </html>
