adicionando mais conteúdo

--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
     <div style="text-align: center;">
           <h1 >Olá, meu nome é lucas</h1>
           <img src="./Image/images.jpg" alt="123">
-          <p>Sou um desenvolvedor web e mobile, tenho aptdão em frontend e backend</p>
+          <p>Sou um desenvolvedor web e mobile, tenho aptidão em frontend e backend</p>
            
         </div>
 
       <div style="text-align: center;">
             <h1>Sobre Mim</h1>
+            <p>Tenho experiência em HTML,CSS,JavaScript,<br/> react.js, react native, next.js.Tambem possuo experiência em processos<br/> de desenvolvimento de software. Estou cursando técnico em informática pelo IFMS</p>
      </div>
+     <div style="text-align: center;">
+        <h1>Habilidades</h1>
+ </div>
      <div style="text-align: center;">
         <h1>Projetos</h1>
   </div>
