adicionando css card

--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
 
           <div class="card">
             <div>.</div>
-            <img src="./Image/download.png" alt="Avatar" style="width:20%">
+            <img src="./Image/download.png" alt="Avatar" style="width:5%">
             <div class="container">
-              <h4><b>JavaScript</b></h4>
-              <p></p>
+              <h2>JavaScript</h2>
             </div>
 
           </div>
