add card principal

--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 <body>
     
     <div style="text-align: center;">
-        <h1 >Olá, meu nome é lucas</h1>
-          <img src="./Image/images.jpg" alt="123">
-        <p>Sou um desenvolvedor web e mobile, tenho aptidão em frontend e backend</p>
+      <div class="card1">
+        <h1 style="color:white">Olá, meu nome é lucas</h1>
+          <img src="./Image/iamge1.jpg" alt="123" style="width:70%">
+        <p style="color:white">Sou um desenvolvedor web e mobile, tenho aptidão em frontend e backend</p>
         </div>
+      </div>
+
 
       <div style="text-align: center;">
           <h1>Sobre Mim</h1>
@@ -25,10 +28,12 @@
         <h1>Habilidades</h1>
 
           <div class="card">
+
             <div>.</div>
-            <img src="./Image/download.png" alt="Avatar" style="width:5%">
+            <img src="./Image/download.png" alt="Avatar" style="width:30%">
             <div class="container">
-              <h2>JavaScript</h2>
+              <h4><b>JAVASCRIPT</b></h4>
+              <p></p>
             </div>
 
           </div>
