--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div style="text-align: center;">
       <div class="card1">
         <h1 style="color:white">Olá, meu nome é lucas</h1>
-          <img src="./Image/iamge1.jpg" alt="123" style="width:70%">
+          <img src="./Image/image2.jpg" alt="123" style="width:90%">
         <p style="color:white">Sou um desenvolvedor web e mobile, tenho aptidão em frontend e backend</p>
         </div>
       </div>
@@ -30,9 +30,9 @@
           <div class="card">
 
             <div>.</div>
-            <img src="./Image/download.png" alt="Avatar" style="width:30%">
+            <img src="./Image/download.png" alt="Avatar" style="width:40%;margin-bottom:10%;">
             <div class="container">
-              <h4><b>JAVASCRIPT</b></h4>
+              <h4 style="color:white"><b>JAVASCRIPT</b></h4>
               <p></p>
             </div>
 
