--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div style="text-align: center;">
       <div class="card1">
         <h1 style="color:white">Olá, meu nome é lucas</h1>
-          <img src="./Image/image2.jpg" alt="123" style="width:90%">
+          <img src="./Image/iamge1.jpg" alt="123" style="width:90%">
         <p style="color:white">Sou um desenvolvedor web e mobile, tenho aptidão em frontend e backend</p>
         </div>
       </div>
