adicionando card giratório

--- a/index.html
+++ b/index.html
@@ -9,28 +9,41 @@
 </head>
 <body>
     
-    <div style="text-align: center;">
-      <div class="card1">
-        <h1 style="color:white">Olá, meu nome é lucas</h1>
-          <img src="./Image/iamge1.jpg" alt="123" style="width:90%">
-        <p style="color:white">Sou um desenvolvedor web e mobile, tenho aptidão em frontend e backend</p>
+  <nav>
+    <ul class="container" style="text-align: center;">
+      <li><a href='#'>Home</a></li>
+      <li class='dropdown'>
+        <a href='#'>Projetos <i class="fa fa-angle-down"></i></a>
+      </li>
+      <li class='dropdown'>
+        <a href='#'>NFT's <i class="fa fa-angle-down"></i> </a>
+      </li>
+     
+      <li><a href='#'>Contatos</a></li>
+    </ul>
+  </nav>
+
+    <div class="principal1">
+      <div class="flipper">
+      <div class="card1" style="color:white; text-align:center">
+        <h1 >Olá, meu nome é Lucas</h1>
+          <img src="./Image/iamge1.jpg" alt="123" style="width:90%;margin-left: 3%">
+        <p style="color:white;margin-bottom: 10%;">Sou um desenvolvedor web e mobile, tenho aptidão em frontend e backend</p>
         </div>
-      </div>
-
-
-      <div style="text-align: center;">
-          <h1>Sobre Mim</h1>
-          <p>Tenho experiência em HTML,CSS,JavaScript,<br/> react.js, react native, next.js.Tambem possuo experiência em processos<br/> de desenvolvimento de software. Estou cursando técnico em informática pelo IFMS</p>
+      <div class="back" style="text-align: center;color:white;">
+          <h1 style="margin-bottom: 20%;margin-top:20%;">Sobre Mim</h1>
+          <p  style="margin-bottom: 80%;">Tenho experiência em HTML,CSS,JavaScript,<br/> react.js, react native, next.js.Tambem possuo experiência em processos<br/> de desenvolvimento de software. Estou cursando técnico em informática pelo IFMS</p>
      </div>
+    </div>
+    </div>
 
-     <div style="text-align: center;">
+<div class="imaginaria">.</div>
 
-        <h1>Habilidades</h1>
 
+     <div class="habilidades" style="text-align: center;"> 
           <div class="card">
-
+            <h1>Habilidades</h1>
             <div>.</div>
-            <img src="./Image/download.png" alt="Avatar" style="width:40%;margin-bottom:10%;">
             <div class="container">
               <h4 style="color:white"><b>JAVASCRIPT</b></h4>
               <p></p>
