--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <ul class="container" style="text-align: center;">
       <li><a href='#'>Home</a></li>
       <li class='dropdown'>
+        <a href='#'>Habilidades <i class="fa fa-angle-down"></i></a>
+      </li>
+      <li class='dropdown'>
         <a href='#'>Projetos <i class="fa fa-angle-down"></i></a>
       </li>
       <li class='dropdown'>
@@ -31,23 +34,18 @@
         <p style="color:white;margin-bottom: 10%;">Sou um desenvolvedor web e mobile, tenho aptidão em frontend e backend</p>
         </div>
       <div class="back" style="text-align: center;color:white;">
-          <h1 style="margin-bottom: 20%;margin-top:20%;">Sobre Mim</h1>
-          <p  style="margin-bottom: 80%;">Tenho experiência em HTML,CSS,JavaScript,<br/> react.js, react native, next.js.Tambem possuo experiência em processos<br/> de desenvolvimento de software. Estou cursando técnico em informática pelo IFMS</p>
+          <h1 style="margin-top:20%;">Sobre Mim</h1>
+          <p  style="margin-bottom: 40%;">Tenho experiência em HTML,CSS,<br/>JavaScript, react.js, react native, next.js.Tambem possuo experiência em processos de desenvolvimento de software. Estou cursando técnico em informática pelo IFMS</p>
      </div>
     </div>
     </div>
 
-<div class="imaginaria">.</div>
+<div class="imaginaria"></div>
 
 
-     <div class="habilidades" style="text-align: center;"> 
+     <div class="habilidades" style="text-align:center;"> 
           <div class="card">
-            <h1>Habilidades</h1>
-            <div>.</div>
-            <div class="container">
-              <h4 style="color:white"><b>JAVASCRIPT</b></h4>
-              <p></p>
-            </div>
+            <h2>Habilidades</h2>
 
           </div>
 
@@ -55,11 +53,17 @@
       </div>
         
       <div style="text-align: center;">
-            <h1>Projetos</h1>
+            <h2>Projetos</h2>
         </div>
+        <div style="text-align: center;">
+          <h2>NFT'S</h2>
+
+
+      </div>
+
       
         <div style="text-align: center;">
-          <h1>contatos</h1>
+          <h2>contatos</h2>
       </div>
 
 </body>
