--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <div class="imaginaria"></div>
 
 
-     <div class="" style="text-align:center;"> 
+     <div class="" style="text-align:center;color: white;"> 
           <div class="habilidades">
             <h1>Habilidades</h1>
           </div>
@@ -49,7 +49,7 @@
             <div class="card22">
             
             <div class="img">
-              <img src="./Image/js.png" alt="123" style="width: 101%;margin-top: 20%;margin-bottom: 10%;">
+              <img src="https://cdn.leonardo.ai/users/6d26f294-5dd2-47cb-b3fa-a48394caf47d/generations/a3a627d5-bebc-4918-ae43-85a23ab3dff9/DreamShaper_v7_nft_of_a_dark_green_sphere_on_a_dark_background_3.jpg?w=512" alt="123" style="width: 101%;margin-top: 20%;margin-bottom: 10%; border-radius: 10px;">
             </div>
             <h3> HTML5</h3>
           </div>
